frontend/style.scss
/* ... */
.reflex-switcheroo-success {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-success-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-success-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-success-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-warning {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-warning-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-warning-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-warning-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-danger {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-danger-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-danger-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-danger-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-text {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-local-text-color);
    --reflex-local-accent-color-variant: var(--reflex-local-text-color);

    // Text styles
    --reflex-local-text-color: var(--reflex-local-text-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-default {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-accent-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-accent-color-variant
    );

    // Surface
    --reflex-local-surface-color: var(--reflex-global-surface-color);
    --reflex-local-surface-color-variant: var(
        --reflex-global-surface-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-surface-color);

    // Material Design Web
    --mdc-theme-primary: var(--reflex-global-accent-color);
    --mdc-theme-secondary: var(--reflex-global-accent-color-variant);
    --mdc-theme-surface: var(--reflex-global-surface-color);
    --mdc-theme-background: var(--reflex-global-background-color);

    --mdc-theme-on-primary: var(--reflex-global-text-on-surface-color);
    --mdc-theme-on-secondary: var(--reflex-global-text-on-surface-color);
    --mdc-theme-on-surface: var(--reflex-global-text-on-surface-color);
}

.reflex-switcheroo-disabled {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-disabled-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-disabled-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-surface-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-custom {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-local-custom-color);
    --reflex-local-accent-color-variant: var(
        --reflex-local-custom-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-local-custom-text-color);

    // Material Design Web
    // TODO
}

// General
.reflex-single-container > * {
    width: 100%;
    height: 100%;
}

html {
    background: var(--reflex-global-background-color);
}

body {
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    font-family: Roboto, sans-serif;
}

.reflex-widget {
    box-sizing: border-box;
}

// Align
.reflex-align > * {
    pointer-events: none;
    position: relative;
}

// Margin
.reflex-margin > * {
    pointer-events: none;
    position: relative;
    width: 100%;
    height: 100%;
}

// Column
.reflex-column,
.reflex-column > div.reflex-undefined-space + div {
    pointer-events: none;

    display: flex;
    flex-direction: column;
    align-items: stretch;
}

// Row
.reflex-row,
.reflex-row > div.reflex-undefined-space + div {
    pointer-events: none;

    display: flex;
    flex-direction: row;
    align-items: stretch;
}

// Undefined Space Highlight
@keyframes moveRight {
    0% {
        background-position: 0 0;
    }

    100% {
        background-position: 1.4142135623730951em 0;
    }
}

.reflex-undefined-space {
    pointer-events: auto;
    flex-grow: 1;

    background-image: repeating-linear-gradient(
        -45deg,
        black 0,
        black 0.5em,
        var(--reflex-global-warning-color) 0.5em,
        var(--reflex-global-warning-color) 1em
    );
    animation: moveRight 0.7s linear infinite;
}

// Grid
.reflex-grid {
    pointer-events: none;
    display: grid;
}

// Text
.reflex-text {
    pointer-events: auto;
    display: flex;
    align-items: center;
    justify-content: center;

    color: var(--reflex-local-text-color);
}

// Rectangle
.reflex-rectangle {
    pointer-events: auto;
    border-style: solid;

    transition-timing-function: ease; // The transition time is set via JS

    /*
    The following attributes are controlled via variables, to allow JavaScript
    to change them, even on pseudo-classes.
    */
    background: var(--rectangle-background);
    border-color: var(--rectangle-stroke-color);
    border-width: var(--rectangle-stroke-width);
    border-radius: var(--rectangle-corner-radius-top-left)
        var(--rectangle-corner-radius-top-right)
        var(--rectangle-corner-radius-bottom-right)
        var(--rectangle-corner-radius-bottom-left);
    box-shadow: var(--rectangle-shadow-offset-x)
        var(--rectangle-shadow-offset-y) var(--rectangle-shadow-radius)
        var(--rectangle-shadow-color);
}

.reflex-rectangle-ripple {
    overflow: hidden;

    @include ripple.surface;
    @include ripple.radius-bounded;
    @include ripple.states;
}
/* ... */

